# MutilAgent-AI

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.sandbox  LICENSE  License  README.md  TEST_REPORT_v1.0.md  docker-compose.yml  providers.json  test_results.txt
.github/workflows/: ci.yml  release.yml
charts/multi-agent/: Chart.yaml  values.yaml
charts/multi-agent/templates/: _helpers.tpl  deployment.yaml  ingress.yaml  service.yaml
config/: default.toml
crates/admin/: Cargo.toml
crates/admin/src/: doctor.rs  lib.rs
crates/admin/tests/: admin_test.rs
crates/app/: package-lock.json  package.json  vite.config.ts
crates/app/src/: App.css  App.tsx
crates/app/src-tauri/: Cargo.toml  tauri.conf.json
crates/app/src-tauri/src/: audit_log.rs  backend.rs  lib.rs  main.rs
crates/app/src/components/: AuditViewer.tsx  ChatInterface.tsx  LogViewer.tsx  SystemHealth.tsx
crates/controller/: Cargo.toml
crates/controller/src/: builder.rs  capability.rs  context.rs  dag.rs  delegation.rs  executor.rs  lib.rs  memory.rs  memory_writeback.rs  parser.rs  persistence.rs  planning.rs  react.rs  sop.rs  summarization.rs
crates/controller/tests/: compaction_flush_test.rs  hitl_integration_test.rs  knowledge_integration_test.rs  memory_test.rs  memory_writeback_test.rs  planning_test.rs  reflection_test.rs  registry_test.rs  resume_test.rs  security_test.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  error.rs  events.rs  evidence.rs  fs_policy.rs  lib.rs  mocks.rs  template.rs  traits.rs
crates/core/src/traits/: controller.rs  events.rs  gateway.rs  governance.rs  llm.rs  mod.rs  skills.rs  state_store.rs  store.rs
crates/core/src/types/: agent.rs  gateway_contract.rs  intent.rs  mod.rs  request.rs  research.rs  session.rs  tool.rs
crates/ecosystem/: Cargo.toml
crates/ecosystem/src/: lib.rs  manager.rs  manifest.rs
crates/gateway/: Cargo.toml
crates/gateway/src/: audio.rs  idempotency.rs  lib.rs  research.rs  router.rs  routing_policy.rs  scheduler.rs  semantic_cache.rs  server.rs  vision.rs
crates/gateway/tests/: gateway_test.rs  integration_v0_8.rs  rate_limit_test.rs  routing_policy_sim_test.rs
crates/governance/: Cargo.toml
crates/governance/src/: approval.rs  audit.rs  budget.rs  guardrails.rs  lib.rs  metrics.rs  network.rs  policy.rs  privacy.rs  rbac.rs  secrets.rs  security.rs  storage_encryption.rs  tracing_layer.rs
crates/governance/tests/: rbac_audit_test.rs
crates/model_gateway/: Cargo.toml
crates/model_gateway/src/: config.rs  lib.rs  pricing.rs  providers.rs  rig_client.rs  selector.rs
crates/sandbox/: Cargo.toml
crates/sandbox/src/: engine.rs  lib.rs  tools.rs
crates/sandbox/tests/: sandbox_integration_test.rs
crates/skills/: Cargo.toml
crates/skills/src/: builtin.rs  code_simplifier.rs  composite_registry.rs  lib.rs  loader.rs  mcp_adapter.rs  mcp_registry.rs  network.rs  registry.rs
crates/store/: Cargo.toml
crates/store/src/: file_provider.rs  isolation.rs  knowledge.rs  lib.rs  memory.rs  qdrant.rs  redis.rs  retention.rs  s3.rs  vector.rs
dashboard/static/: app.js  index.html  style.css
deploy/k8s/: deployment.yaml
docs/plans/: 2026-02-17-enterprise-platform-p0-execution.md  2026-02-17-llm-intent-router.md  2026-02-18-p0-stabilization-execution.md  2026-02-18-p1-memory-compaction-execution.md  2026-02-18-p2-routing-governance-execution.md
scripts/: generate_keys.sh
src/: main.rs
tests/: algorithm_test.rs  governance_test.rs  multi_instance_test.rs  system_test.rs
tests/integration/: text_pipeline_test.rs
