[package]
name = "multi_agent_admin"
version.workspace = true
edition.workspace = true

[dependencies]
multi_agent_core.workspace = true
multi_agent_governance.workspace = true
multi_agent_skills.workspace = true
tokio.workspace = true
axum.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tower-http.workspace = true
utoipa = { version = "4", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "6", features = ["axum"] }
rust-embed = "8"
mime_guess = "2"
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
chrono = "0.4"
reqwest.workspace = true
aws-sdk-s3 = "1"
aws-config = "1"
uuid = { version = "1.10", features = ["v4", "serde"] }
tracing.workspace = true
bollard = "0.18"



[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
tower = { workspace = true }
reqwest = { workspace = true, features = ["json"] }

