[package]
name = "multi_agent_controller"
version.workspace = true
edition.workspace = true

[dependencies]
multi_agent_core.workspace = true
multi_agent_store.workspace = true
multi_agent_skills.workspace = true
multi_agent_model_gateway.workspace = true
multi_agent_governance.workspace = true
tokio.workspace = true
async-trait.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
uuid.workspace = true
anyhow.workspace = true
dashmap.workspace = true
chrono = "0.4.43"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
