[package]
name = "multi_agent_core"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
async-trait.workspace = true
bytes.workspace = true
uuid.workspace = true
anyhow.workspace = true
tera = "1.19"
sha2 = "0.10"
