[package]
name = "multi_agent_gateway"
version.workspace = true
edition.workspace = true

[dependencies]
multi_agent_core.workspace = true
multi_agent_store.workspace = true
multi_agent_model_gateway.workspace = true
multi_agent_admin.workspace = true
multi_agent_governance.workspace = true
tokio.workspace = true
axum.workspace = true
axum-extra.workspace = true
tower.workspace = true
tower-http.workspace = true
async-trait.workspace = true
bytes.workspace = true
uuid.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
dashmap.workspace = true
image.workspace = true
base64.workspace = true

# Observability
metrics.workspace = true
metrics-exporter-prometheus.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
