[package]
name = "multi_agent_gateway"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
multi_agent_core.workspace = true
multi_agent_store.workspace = true
multi_agent_model_gateway.workspace = true
multi_agent_admin.workspace = true
multi_agent_governance.workspace = true
multi_agent_ecosystem.workspace = true
tokio.workspace = true
axum = { workspace = true, features = ["ws"] }
axum-extra.workspace = true
tower.workspace = true
tower-http.workspace = true
async-trait.workspace = true
bytes.workspace = true
uuid.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
anyhow.workspace = true
dashmap.workspace = true
image.workspace = true
base64.workspace = true

# Observability
metrics.workspace = true
metrics-exporter-prometheus.workspace = true

# Rate limiting
tower_governor = "0.4"
governor = "0.6"

# WebSocket + stream utilities
futures.workspace = true
axum-server = { version = "0.8.0", features = ["tls-rustls"] }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
multi_agent_skills = { workspace = true }
