[package]
name = "multi_agent_governance"
version.workspace = true
edition.workspace = true

[dependencies]
multi_agent_core.workspace = true
tokio.workspace = true
async-trait.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
dashmap.workspace = true
uuid.workspace = true
tracing-subscriber.workspace = true
regex = "1.10"

# Observability
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-otlp.workspace = true
tracing-opentelemetry.workspace = true
opentelemetry-jaeger.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
