[package]
name = "multi_agent_governance"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
multi_agent_core.workspace = true
tokio.workspace = true
async-trait.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
dashmap.workspace = true
uuid.workspace = true
tracing-subscriber.workspace = true
regex = "1.10"
aes-gcm.workspace = true
rand.workspace = true
url.workspace = true
thiserror.workspace = true
base64.workspace = true
jsonwebtoken.workspace = true
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde_yaml.workspace = true
futures.workspace = true

# Observability
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-otlp.workspace = true
tracing-opentelemetry.workspace = true
rusqlite.workspace = true
sha2.workspace = true
hex = "0.4.3"
bytes.workspace = true

[dev-dependencies]
multi_agent_store.workspace = true
tempfile = "3.25.0"
tokio = { workspace = true, features = ["test-util", "macros"] }
