[package]
name = "multi_agent_model_gateway"
version.workspace = true
edition.workspace = true

[dependencies]
multi_agent_core.workspace = true
tokio.workspace = true
async-trait.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
dashmap.workspace = true
rig-core.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
