[package]
name = "multi_agent_skills"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
multi_agent_core.workspace = true
multi_agent_store.workspace = true
multi_agent_sandbox.workspace = true
multi_agent_governance.workspace = true
reqwest.workspace = true
schemars = "0.8"
tokio.workspace = true
tokio-stream.workspace = true
futures.workspace = true
async-trait.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
dashmap.workspace = true
anyhow.workspace = true
syn.workspace = true
quote.workspace = true
proc-macro2.workspace = true
async-mcp.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
