[package]
name = "multi_agent_store"
version.workspace = true
edition.workspace = true

[dependencies]
multi_agent_core.workspace = true
tokio.workspace = true
async-trait.workspace = true
bytes.workspace = true

# Persistence
redis.workspace = true
aws-config.workspace = true
aws-sdk-s3.workspace = true
dashmap.workspace = true
uuid.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true

# Vector Database
qdrant-client.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
